--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Gudea:400,700);
 html, body {
   font-family: "Raleway", sans-serif;
   font-weight: 300;
@@ -124,157 +123,6 @@ html, body {
 @media screen and (max-width: 767px) {
   h1.caption {
     font-size: 50px; } }
-body ::-webkit-input-placeholder {
-  color: #4E546D; }
-body .authent {
-  position: absolute;
-  left: 0;
-  right: 90px;
-  margin: auto;
-  width: 100px;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  text-align: center;
-  padding: 20px 70px;
-  top: 200px;
-  bottom: 0;
-  height: 70px;
-  opacity: 0; }
-  body .authent p {
-    text-align: center;
-    color: white; }
-body .success {
-  display: none;
-  color: #d5d8e2; }
-  body .success p {
-    font-size: 14px; }
-body p {
-  color: #5B5E6F;
-  font-size: 10px;
-  text-align: left; }
-body .testtwo {
-  left: -320px !important; }
-body .test {
-  box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
-  pointer-events: none;
-  top: -100px !important;
-  transform: rotateX(70deg) scale(0.8) !important;
-  opacity: .6 !important;
-  filter: blur(1px); }
-body .login {
-  opacity: 1;
-  top: 20px;
-  -webkit-transition-timing-function: cubic-bezier(0.68, -0.25, 0.265, 0.85);
-  transition-property: transform,opacity,box-shadow,top,left;
-  transition-duration: .5s;
-  transform-origin: 161px 100%;
-  transform: rotateX(0deg);
-  position: relative;
-  width: 240px;
-  border-top: 2px solid #D8312A;
-  height: 300px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  padding: 100px 40px 40px 40px;
-  background: #35394a;
-  /* Old browsers */
-  background: -moz-linear-gradient(45deg, #35394a 0%, #1f222e 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #35394a), color-stop(100%, #1f222e));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(45deg, #35394a 0%, #1f222e 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(45deg, #35394a 0%, #1f222e 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(45deg, #35394a 0%, #1f222e 100%);
-  /* IE10+ */
-  background: linear-gradient(45deg, #35394a 0%, #1f222e 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#35394a', endColorstr='#1f222e',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */ }
-  body .login .validation {
-    position: absolute;
-    z-index: 1;
-    right: 10px;
-    top: 6px;
-    opacity: 0; }
-  body .login .disclaimer {
-    position: absolute;
-    bottom: 20px;
-    left: 35px;
-    width: 250px; }
-  body .login_title {
-    color: #afb1be;
-    height: 60px;
-    text-align: left;
-    font-size: 16px; }
-  body .login_fields {
-    height: 208px;
-    position: absolute;
-    left: 0; }
-    body .login_fields .icon {
-      position: absolute;
-      z-index: 1;
-      left: 36px;
-      top: 8px;
-      opacity: .5; }
-    body .login_fields input[type='password'] {
-      color: #DC6180 !important; }
-    body .login_fields input[type='text'], body .login_fields input[type='password'] {
-      color: #afb1be;
-      width: 190px;
-      margin-top: -2px;
-      background: #32364a;
-      left: 0;
-      padding: 10px 65px;
-      border-top: 2px solid #393d52;
-      border-bottom: 2px solid #393d52;
-      border-right: none;
-      border-left: none;
-      outline: none;
-      font-family: 'Gudea', sans-serif;
-      box-shadow: none; }
-    body .login_fields__user, body .login_fields__password {
-      position: relative; }
-    body .login_fields__submit {
-      position: relative;
-      top: 35px;
-      left: 0;
-      width: 80%;
-      right: 0;
-      margin: auto; }
-      body .login_fields__submit .forgot {
-        float: right;
-        font-size: 10px;
-        margin-top: 11px;
-        text-decoration: underline; }
-        body .login_fields__submit .forgot a {
-          color: #606479; }
-      body .login_fields__submit input {
-        border-radius: 50px;
-        background: transparent;
-        padding: 10px 50px;
-        border: 2px solid #DC6180;
-        color: #DC6180;
-        text-transform: uppercase;
-        font-size: 11px;
-        transition-property: background,color;
-        transition-duration: .2s; }
-        body .login_fields__submit input:focus {
-          box-shadow: none;
-          outline: none; }
-        body .login_fields__submit input:hover {
-          color: white;
-          background: #DC6180;
-          cursor: pointer;
-          transition-property: background,color;
-          transition-duration: .2s; }
-
 /* Color Schemes */
 .love {
   position: absolute;
@@ -285,7 +133,7 @@ body .login {
   .love p {
     color: white;
     font-weight: normal;
-    font-family: 'Open Sans', sans-serif; }
+    font-family: "Raleway", sans-serif; }
   .love a {
     color: white;
     font-weight: 700;
@@ -320,28 +168,6 @@ body .login {
   width: 100px;
   display: block; }
 
-.btn {
-  padding: 10px 20px;
-  background: #F4F4F2; }
-
-.btn_red {
-  background: #ED6347;
-  color: #FFF; }
-
-.btn:hover {
-  background: #E4E4E2; }
-
-.btn_red:hover {
-  background: #C12B05; }
-
-a.btn {
-  color: #666;
-  text-align: center;
-  text-decoration: none; }
-
-a.btn_red {
-  color: #FFF; }
-
 .one_half {
   width: 50%;
   display: block;
@@ -374,7 +200,8 @@ a.btn_red {
   font-size: 16px; }
 
 .popupBody {
-  padding: 20px; }
+  padding: 20px;
+  text-decoration: none; }
 
 /* Social Login Form */
 .social_login .social_box {
@@ -384,31 +211,28 @@ a.btn_red {
   margin-bottom: 10px;
   background: #F4F4F2;
   overflow: hidden; }
-
 .social_login .icon {
   display: block;
-  width: 10px;
-  padding: 5px 10px;
+  width: 35px;
+  padding: 10px;
   margin-right: 10px;
   float: left;
   color: #FFF;
   font-size: 16px;
   text-align: center; }
-
 .social_login .fb .icon {
   background: #3B5998; }
-
 .social_login .google .icon {
   background: #DD4B39; }
-
+.social_login .linkedIn .icon {
+  background: #3E5065; }
 .social_login .icon_title {
   display: block;
-  padding: 5px 0;
+  padding: 10px 0;
   float: left;
   font-weight: bold;
   font-size: 16px;
   color: #777; }
-
 .social_login .social_box:hover {
   background: #E4E4E2; }
 
@@ -422,9 +246,8 @@ a.btn_red {
 .action_btns {
   clear: both;
   overflow: hidden; }
-
-.action_btns a {
-  display: block; }
+  .action_btns a {
+    display: block; }
 
 /* User Login Form */
 .user_login {
