Added checkboxes, enhanced design.

--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,7 @@ html, body {
   width: 35px;
   padding: 10px;
   margin-right: 10px;
+  margin-top: 3px;
   float: left;
   color: #FFF;
   font-size: 16px;
@@ -262,7 +263,8 @@ html, body {
   width: 90%;
   padding: 10px;
   border: 1px solid #DDD;
-  color: #666; }
+  color: #666;
+  margin: 0; }
 
 .user_login input[type="checkbox"] {
   float: left;
@@ -296,6 +298,7 @@ html, body {
   display: block;
   width: 90%;
   padding: 10px;
+  margin: 0;
   border: 1px solid #DDD;
   color: #666; }
 
@@ -310,5 +313,8 @@ html, body {
   margin-bottom: 10px;
   clear: both;
   overflow: hidden; }
+
+.checkbox p {
+  display: inline; }
 
 /*# sourceMappingURL=index.css.map */
