--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,12 @@ html, body {
   -webkit-font-smoothing: antialiased;
   color: #666; }
 
+.carousel {
+  max-height: 700px; }
+
+.panel {
+  padding-right: 0; }
+
 .navbar-default {
   text-align: center;
   background: transparent;
@@ -66,7 +72,7 @@ html, body {
   font-weight: 200; }
 
 .slides-container li img {
-  background-attachment: fixed; }
+  position: fixed; }
 
 .slides-navigation a {
   border-color: 3px solid #fff;
@@ -316,5 +322,27 @@ html, body {
 
 .checkbox p {
   display: inline; }
+
+.main-content {
+  height: 700px;
+  width: 85%;
+  margin: 0 auto; }
+
+.panels {
+  padding-left: 0;
+  padding-right: 0; }
+
+.menu-right {
+  padding-left: 0;
+  padding-right: 0; }
+
+.panel {
+  padding: 0;
+  margin: 10px; }
+
+.list-group {
+  margin: 10px 0px 10px 0px;
+  padding-left: 0px;
+  padding-right: 0px; }
 
 /*# sourceMappingURL=index.css.map */
