--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,9 @@ html, body {
   -webkit-font-smoothing: antialiased;
   color: #666; }
 
+a, input,
 .carousel {
-  max-height: 700px; }
+  max-height: 800px; }
 
 .panel {
   padding-right: 0; }
@@ -106,10 +107,12 @@ html, body {
   margin-right: 3px; }
 
 .slides-pagination a {
+  position: relative;
   border-color: white;
   width: 15px;
   height: 15px;
-  opacity: 0.8; }
+  opacity: 0.8;
+  bottom: 50px; }
 
 .slides-pagination a.current {
   background: white; }
@@ -324,9 +327,9 @@ html, body {
   display: inline; }
 
 .main-content {
-  height: 700px;
+  height: 300px;
   width: 85%;
-  margin: 0 auto; }
+  margin: 50px auto; }
 
 .panels {
   padding-left: 0;
@@ -337,12 +340,33 @@ html, body {
   padding-right: 0; }
 
 .panel {
+  max-width: 320px;
+  margin: 0 auto;
   padding: 0;
-  margin: 10px; }
+  margin: 10px;
+  margin-right: 0;
+  border-radius: 0; }
+  .panel .panel-heading {
+    border-radius: 0;
+    text-align: center; }
 
 .list-group {
-  margin: 10px 0px 10px 0px;
+  margin: 10px 0px 10px 10px;
   padding-left: 0px;
   padding-right: 0px; }
+  .list-group .input-group-addon {
+    border-radius: 0; }
+  .list-group p {
+    text-align: center; }
+
+.search {
+  margin: 1px 0; }
+
+.list-group-item {
+  border: 0px;
+  font-weight: 300;
+  text-align: center; }
+  .list-group-item .badge {
+    border-radius: 0; }
 
 /*# sourceMappingURL=index.css.map */
