--- a/css/index.css
+++ b/css/index.css
@@ -328,38 +328,44 @@ a, input,
 
 .main-content {
   width: 85%;
-  margin: 50px auto;
-  display: inline-block; }
+  margin: 50px auto; }
 
 .panels {
   padding-left: 0;
-  padding-right: 0; }
+  padding-right: 0;
+  float: none;
+  margin: 0 auto; }
 
-.menu-right {
+.menu-left {
   padding-left: 0;
-  padding-right: 0; }
+  padding-right: 0;
+  width: 50%; }
 
 .panel {
-  max-width: 320px;
+  min-width: 220px;
+  max-width: 335px;
   margin: 0 auto;
   padding: 0;
-  margin: 10px;
-  margin-right: 0;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
   border-radius: 0; }
   .panel .panel-heading {
     border-radius: 0;
     text-align: center; }
   .panel .panel-body {
-    padding: 0; }
+    padding: 0;
+    width: 100%; }
     .panel .panel-body .image-container {
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      width: 100%; }
       .panel .panel-body .image-container a {
+        width: 100%;
         display: block;
         text-align: center; }
         .panel .panel-body .image-container a img {
           max-width: 100%;
-          max-height: 170px; }
+          max-height: 180px; }
     .panel .panel-body .info-container {
       margin: 10px; }
       .panel .panel-body .info-container .project_hashtags {
@@ -392,36 +398,40 @@ a, input,
   .list-group-item .badge {
     border-radius: 0; }
 
-.footer {
-  margin: 0; }
+footer {
+  margin: 0;
+  background: #272731; }
 
 .footer-container {
-  background: #272731;
+  display: inline-block;
   width: 100%;
-  max-width: 100%; }
-  .footer-container .row div {
-    height: 100px; }
-  .footer-container .row .copyrights {
-    display: inline-block;
-    width: 100%;
-    height: 0px; }
+  max-width: 100%;
+  max-height: 300px; }
+
+.copyrights {
+  text-align: center;
+  margin: 40px auto 0px auto; }
 
 .copyright {
-  text-align: center;
-  margin: 10px auto; }
+  margin: 0; }
+
+.list-inline {
+  text-align: left;
+  margin-left: 10px; }
 
 .social_list {
   vertical-align: middle; }
 
 .social_btn {
   display: inline;
-  float: left;
   color: white;
   margin-right: 5px; }
 
 .social-header {
+  text-align: left;
   line-height: 3;
-  margin-right: 5px; }
+  display: block;
+  width: 100%; }
 
 .icon {
   display: block;
