--- a/css/index.scss
+++ b/css/index.scss
@@ -418,26 +418,30 @@ a, input,
 .main-content{
   width: 85%;
   margin: 50px auto;
-  display: inline-block;
+
 }
 
 .panels{
   padding-left:0;
   padding-right:0;
+  float: none;
+  margin: 0 auto;
 }
 
-.menu-right{
+.menu-left{
   padding-left: 0;
   padding-right: 0;
+  width:50%;
 }
 
 .panel{
-  max-width: 320px;
+  min-width: 220px;
+  max-width: 335px;
   margin: 0 auto;
   padding: 0;
-  margin:10px;
-  margin-right:0;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
   border-radius: 0;
   .panel-heading{
     border-radius: 0;
@@ -445,15 +449,18 @@ a, input,
   }
   .panel-body{
     padding: 0;
+    width: 100%;
 
     .image-container{
       margin-bottom:10px;
+      width: 100%;
       a{
+        width: 100%;
         display:block;
         text-align:center;
         img{
           max-width: 100%;
-          max-height: 170px;
+          max-height: 180px;
         }
       }
     }
@@ -505,29 +512,30 @@ a, input,
 }
 
 // Footer
-.footer{
+footer{
   margin: 0;
+  background: #272731;
 }
 
 .footer-container {
-    background: #272731;
+    display: inline-block;
     width: 100%;
     max-width: 100%;
-    .row{
-      div{
-        height: 100px;
-      }
-      .copyrights{
-        display: inline-block;
-        width: 100%;
-        height: 0px;
-      }
-    }
+    max-height: 300px;
+}
+
+.copyrights{
+  text-align:center;
+  margin: 40px auto 0px auto;
 }
 
 .copyright{
-  text-align:center;
-  margin: 10px auto;
+  margin: 0;
+}
+
+.list-inline{
+  text-align:left;
+  margin-left: 10px;
 }
 
 .social_list{
@@ -536,14 +544,15 @@ a, input,
 
 .social_btn{
   display: inline;
-  float:left;
   color: white;
   margin-right:5px;
 }
 
 .social-header{
+  text-align:left;
   line-height:3;
-  margin-right:5px;
+  display: block;
+  width: 100%;
 }
 
 .icon  {
