--- a/css/index.scss
+++ b/css/index.scss
@@ -418,6 +418,7 @@ a, input,
 .main-content{
   width: 85%;
   margin: 50px auto;
+  text-align:center;
 
 }
 
@@ -439,6 +440,9 @@ a, input,
   max-width: 335px;
   margin: 0 auto;
   padding: 0;
+  float: none;
+  display: inline-block;
+  text-align:left;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
