--- a/css/index.scss
+++ b/css/index.scss
@@ -433,6 +433,7 @@ a, input,
   padding-left: 0;
   padding-right: 0;
   width:50%;
+  display: inline-block;
 }
 
 .panel{
@@ -510,6 +511,7 @@ a, input,
   border: 0px;
   font-weight:300;
   text-align:center;
+  display: inline;
   .badge{
     border-radius: 0;
   }
