--- a/css/index.scss
+++ b/css/index.scss
@@ -536,7 +536,7 @@ footer{
 }
 
 .copyright{
-  margin: 0;
+  margin-top: 20px;
 }
 
 .list-inline{
@@ -580,4 +580,19 @@ footer{
 }
 .icon.linkedIn  {
     background: #3E5065;
+}
+
+.footer-row{
+  margin: 0;
+}
+
+.subscription-header{
+  margin-top: 10px;
+  font-size: 15px;
+  color: white;
+  text-align: right;
+}
+
+.subscription{
+  margin-top:20px;
 }
