--- a/css/index.scss
+++ b/css/index.scss
@@ -1,15 +1,30 @@
 $font-family-main: 'Raleway', sans-serif;
-$hover-color: #FFEABF;
+$color-main: #AFA8A2;
+$color-active: #D66360;
+$color-main-hover: #333333;
+$color-background: #F2F1ED;
+
 
 html, body{
   font-family: $font-family-main !important;
+  font-size: 16px;
   font-weight: 300 !important;
   text-decoration: none !important;
   -webkit-font-smoothing: antialiased !important;
-  color: #666 !important;
+  //color: #666 !important;
+  background-color: $color-background;
+}
+p, li{
+  color: $color-main !important;
 }
 
-a, input,
+p:hover, li:hover{
+  color: $color-main-hover !important;
+}
+
+a{
+  text-decoration: none !important;
+}
 
 .carousel {
   max-height: 800px;
@@ -47,7 +62,7 @@ a, input,
   li:hover{
     background: transparent;
     a{
-      color: $hover-color;
+      color: $color-active;
       background: transparent;
     }
   }
@@ -137,11 +152,14 @@ a, input,
 }
 
 .slides-pagination a{
-  position: relative;
   border-color:white;
   width:15px;
   height:15px;
   opacity: 0.8;
+}
+
+.slides-pagination{
+  position: relative;
   bottom: 50px;
 }
 
@@ -156,17 +174,16 @@ a, input,
     text-decoration: none;
     opacity: 0.95;
   }
-  p{
+  h4{
     text-shadow: 0px 1px 1px #000;
     color: white;
-    font-size: 20px;
     font-weight: 500;
   }
 }
 
 @media screen and (max-width: 767px) {
   h1.caption {
-    font-size: 50px;
+    font-size: 60px;
   }
 }
 
@@ -493,9 +510,16 @@ a, input,
         text-align:center;
         list-style-type: none;
         margin-bottom:10px;
+
         .param{
           display: inline-block;
           margin: 0 5px;
+        }
+        .param:hover{
+          color: $color-active !important;
+        }
+        a{
+          text-decoration: none;
         }
       }
     }
@@ -514,12 +538,40 @@ a, input,
 
 .list-group-item{
   border: 0px;
-  font-weight:300;
+  margin: 3px auto;
+  font-weight:500;
+  border-radius: 0 !important;
   text-align:center;
   display: inline-block;
   .badge{
     border-radius: 0;
   }
+}
+
+.btn-load{
+  margin: 40px auto;
+  a{
+    text-decoration: none;
+  }
+}
+
+.input-group-btn{
+  a{
+    text-decoration: none;
+  }
+}
+
+.xs-input{
+  height: 30px;
+}
+
+.footer-content{
+  display:inline-block;
+}
+
+input.xs-input{
+  border-radius: 0px !important;
+  -webkit-appearance: none !important;
 }
 
 // Footer
@@ -547,6 +599,9 @@ footer{
 .list-inline{
   text-align:left;
   margin-left: 10px;
+  li{
+    font-weight: 300;
+  }
 }
 
 .social_list{
@@ -572,6 +627,8 @@ p, li{
   line-height:3;
   display: block;
   width: 100%;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 
@@ -601,10 +658,15 @@ p, li{
 }
 
 .subscription-header{
-  margin-top: 10px;
-  font-size: 15px;
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 500;
   color: white;
   text-align: right;
+}
+
+.subscription-header:hover, .social-header:hover, .copyright:hover{
+  color: $color-active !important;
 }
 
 .subscription{
