--- a/css/index.css
+++ b/css/index.css
@@ -342,10 +342,17 @@ a {
   display: inline; }
 
 .main-content {
-  width: 85%;
-  margin: 50px auto;
+  width: 100%;
+  margin: auto;
+  padding-top: 50px;
   text-align: center;
-  z-index: 1; }
+  z-index: 1;
+  background-color: #F2F1ED;
+  position: relative;
+  /*width: 85%;
+  margin: 50px auto;
+  text-align:center;
+  z-index: 1;*/ }
 
 .panels {
   padding-left: 0;
@@ -459,7 +466,8 @@ input.xs-input {
 
 footer {
   margin: 0;
-  background: #272731; }
+  background: #272731;
+  position: relative; }
 
 .footer-container {
   width: 100%;
