--- a/css/index.css
+++ b/css/index.css
@@ -383,7 +383,10 @@ a {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
-  border-radius: 0; }
+  border-radius: 0;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important; }
   .panel .panel-heading {
     border-radius: 0;
     text-align: center; }
@@ -514,6 +517,17 @@ p, li {
   width: 100%;
   font-weight: 500;
   font-size: 20px; }
+
+#nav.affix-top {
+  position: absolute;
+  background-color: transparent; }
+
+#nav.affix {
+  position: fixed;
+  background-color: #272731;
+  -webkit-transition: all .6s ease-in-out; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
+    background-color: #272731; }
 
 .icon {
   display: block;
