--- a/css/index.scss
+++ b/css/index.scss
@@ -27,6 +27,7 @@ html, body{
   background-color: $color-background;
   z-index: 2;
 }
+
 p, li{
   color: $color-main !important;
 }
@@ -496,6 +497,9 @@ position: relative;
   margin-bottom: 10px;
   margin-right: 10px;
   border-radius: 0;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
+  -moz-box-shadow:    0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
+  box-shadow:         0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
   .panel-heading{
     border-radius: 0;
     text-align: center;
@@ -676,6 +680,29 @@ p, li{
   width: 100%;
   font-weight: 500;
   font-size: 20px;
+}
+
+#nav.affix-top{
+  position:absolute;
+  background-color:transparent;
+}
+
+#nav.affix{
+  position:fixed;
+  background-color:#272731;
+  -webkit-transition: all .6s ease-in-out;
+  .container-fluid{
+    #bs-example-navbar-collapse-1{
+      .navbar-nav{
+          li.dropdown{
+            ul.dropdown-menu{
+              background-color:#272731;
+            }
+          }
+      }
+    }
+  }
+
 }
 
 
