--- a/css/index.scss
+++ b/css/index.scss
@@ -626,6 +626,7 @@ input.xs-input{
 
 // Footer
 footer{
+  text-align:center;
   margin: 0;
   background: #272731;
   position: relative;
@@ -636,6 +637,44 @@ footer{
     max-width: 90%;
     margin: 0 auto;
     max-height: 300px;
+    display: inline-block;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-container{
+    max-width: 100%;
+  }
+
+  .subscr-sector{
+    padding-right: 0;
+    .subscription-header{
+      margin-bottom:0;
+    }
+    .subscription{
+      margin-top:0;
+    }
+  }
+
+  .social-sector{
+    padding-left: 0;
+  }
+
+  .copyrights{
+    .list-inline{
+      text-align: center;
+    }
+  }
+
+  .caption{
+    font-size: 35px !important;
+  }
+
+  .contrast{
+    h4{
+      font-size: 20px !important;
+    }
+  }
+
 }
 
 .copyrights{
@@ -644,6 +683,7 @@ footer{
 }
 
 .copyright{
+  margin: 0;
   margin-top: 20px;
 }
 
@@ -656,6 +696,7 @@ footer{
 }
 
 .social_list{
+  display:inline-block;
   vertical-align:middle;
   a{
     text-decoration: none !important;
@@ -665,7 +706,6 @@ footer{
 .social_btn{
   display: inline;
   color: white;
-  margin-right:5px;
 }
 
 p, li{
@@ -705,25 +745,37 @@ p, li{
 
 }
 
-
-.icon  {
+.icon{
   display: block;
   width: 35px;
+  height:35px;
   padding: 10px;
   margin-right:  10px;
   margin-top: 3px;
   float: left;
   color: #FFF;
   font-size: 16px;
-  text-align:  center;
+  text-align: center;
 }
-.icon.fb  {
+
+
+
+.social-icon  {
+  @extend .icon;
+  height:35px;
+  margin-top:5px;
+  margin-right: 5px;
+  i{
+    line-height: 2px;
+  }
+}
+.social-icon.fb  {
   background: #3B5998;
 }
-.icon.google  {
+.social-icon.google  {
     background: #DD4B39;
 }
-.icon.linkedIn  {
+.social-icon.linkedIn  {
     background: #3E5065;
 }
 
